# personal-finance-tracker

./: README.md  proj-ver2  proj-ver2.cpp  proj.cpp
with-gui/: CMakeLists.txt  README-for-GUI.md  README.md
with-gui/src/: main.cpp
with-gui/src/models/: financemanager.cpp  financemanager.h  transaction.cpp  transaction.h
with-gui/src/views/: mainwindow.cpp  mainwindow.h  mainwindow.ui  transactiondialog.cpp  transactiondialog.h  transactiondialog.ui
without-gui/: FinanceManager.cpp  FinanceManager.h  Transaction.cpp  Transaction.h  main.cpp
